# 340006-SD-99-MCP-M365-Server

./: .gitignore  ASSIGNMENT.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
src/mcp_m365/: __init__.py  __main__.py  server.py
src/mcp_m365/auth/: __init__.py  cert_utils.py  oauth.py  token_store.py
src/mcp_m365/graph/: __init__.py  client.py
src/mcp_m365/tools/: __init__.py  auth.py  chat.py  contacts.py  drafts.py  folders.py  messages.py  planner.py  send.py
src/sm_mcp_m365_python/: __main__.py  server.py
src/sm_mcp_m365_python/auth/: __init__.py  cert_utils.py  oauth.py  token_store.py
src/sm_mcp_m365_python/graph/: __init__.py  client.py
src/sm_mcp_m365_python/tools/: auth.py  folders.py  messages.py  send.py
