[project]
name = "mcp-m365"
version = "0.0.1"
description = "MCP server for Microsoft 365 email operations via Microsoft Graph API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SimpleMotion", email = "info@simplemotion.com" }
]
keywords = ["mcp", "m365", "microsoft", "graph", "email", "outlook"]

dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
]

[project.scripts]
mcp-m365 = "mcp_m365:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_m365"]
