[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-m365"
version = "0.1.0"
description = "Microsoft 365 MCP Server for Claude Code integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SimpleMotion", email = "admin@simplemotion.com.au" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-m365 = "mcp_m365.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_m365"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE.md",
]
